# SamEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/shaders/: basic_lit.glsl  shader.frag  unlit.glsl  unlit_texture.glsl  vertexShader.glsl
include/glad/: glad.h
src/: main.cpp
src/core/: Time.cpp  Time.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.h  MeshFactory.cpp  MeshFactory.h  MeshRenderer.cpp  Meshrenderer.h  PointLight.h  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Transform.h
src/util/: config.h
